--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -12,13 +12,15 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": ".",
+  "homepage": "https://theobravos.github.io",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy":   "gh-pages -d build"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
