updates to hero

--- a/package.json
+++ b/package.json
@@ -623,6 +623,7 @@
     }
   },
   "dependencies": {
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.513.0",
     "react-scripts": "^5.0.1"
   },
