--- a/asset-manifest 2.json
+++ b/asset-manifest 2.json
@@ -1,10 +1,10 @@
 {
   "files": {
-    "main.css": "./static/css/main.4fa46b00.css",
-    "main.js": "./static/js/main.73f52b8d.js",
-    "index.html": "./index.html",
-    "main.4fa46b00.css.map": "./static/css/main.4fa46b00.css.map",
-    "main.73f52b8d.js.map": "./static/js/main.73f52b8d.js.map"
+    "main.css": "/static/css/main.4fa46b00.css",
+    "main.js": "/static/js/main.73f52b8d.js",
+    "index.html": "/index.html",
+    "main.4fa46b00.css.map": "/static/css/main.4fa46b00.css.map",
+    "main.73f52b8d.js.map": "/static/js/main.73f52b8d.js.map"
   },
   "entrypoints": [
     "static/css/main.4fa46b00.css",
